# api

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  elm-package.json  start.sh
.circleci/: config.yml
admin/: Links.elm  Login.elm  Main.elm  Stylesheet.elm
dev/: postman_collection.json
migrations/2017-10-02-125941_create_links/: up.sql
migrations/2017-10-02-130231_create_votes/: up.sql
src/: dummy.rs  jobs.rs  lib.rs  main.rs  models.rs  pg_pool.rs
src/data/: category.rs  hoax.rs  link.rs  mod.rs  models.rs  pg_pool.rs  schema.rs  verified_list.rs  vote.rs
src/endpoints/: admin.rs  categories.rs  healthcheck.rs  hoaxes.rs  index.rs  links.rs  mod.rs  votes.rs
src/extractor/: extractor.rs  package-lock.json
src/lib/: mod.rs  pg_pool.rs  remote_ip.rs  responders.rs
src/scrapper/: package-lock.json  scrapper.rs  unfluff.js
src/views/: admin.hbs  index.hbs
tests/: index_test.rs
